force-app/main/default/objects/DI_Demo_Request__c/DI_Demo_Request__c.object-meta.xml
<CustomObject>
    <label>Demo Request</label>
    <nameField>
        <displayFormat>DEMO-{0000}</displayFormat>
        <label>Demo Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Demo Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>