force-app/main/default/objects/DI_Demo_Request__c/fields/Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Account_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field is created as part of story - 2038 (for SE Demo)</description>
    <label>Account Name</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>DI_Demo_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>