force-app/main/default/objects/DI_Demo_Request__c/fields/Alt_SE__c.field-meta.xml
<CustomField>
    <fullName>Alt_SE__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Assigned to alt/additional SC</label>
    <referenceTo>User</referenceTo>
    <relationshipName>DI_Demo_Requests2</relationshipName>
    <type>Lookup</type>
</CustomField>