force-app/main/default/objects/DI_Demo_Request__c/fields/Concept_Type__c.field-meta.xml
<CustomField>
    <fullName>Concept_Type__c</fullName>
    <label>Concept Type:</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>TS</fullName>
            </value>
            <value>
                <fullName>QS</fullName>
            </value>
            <value>
                <fullName>Fast Casual</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>