force-app/main/default/objects/DI_Demo_Request__c/fields/Confirmed_Duration__c.field-meta.xml
<CustomField>
    <fullName>Confirmed_Duration__c</fullName>
    <label>Confirmed Duration (In hours)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>