force-app/main/default/objects/DI_Demo_Request__c/fields/Current_POS_Solution__c.field-meta.xml
<CustomField>
    <fullName>Current_POS_Solution__c</fullName>
    <label>Current POS Solution:</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Toast</fullName>
            </value>
            <value>
                <fullName>Par</fullName>
            </value>
            <value>
                <fullName>Revel</fullName>
            </value>
            <value>
                <fullName>Square</fullName>
            </value>
            <value>
                <fullName>Lavu</fullName>
            </value>
            <value>
                <fullName>Qu</fullName>
            </value>
            <value>
                <fullName>Lightspeed</fullName>
            </value>
            <value>
                <fullName>Upserve</fullName>
            </value>
            <value>
                <fullName>Union</fullName>
            </value>
            <value>
                <fullName>Clover</fullName>
            </value>
            <value>
                <fullName>Touch Bistro</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>