force-app/main/default/objects/DI_Demo_Request__c/fields/Demo_Attendee_2__c.field-meta.xml
<CustomField>
    <fullName>Demo_Attendee_2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Demo Attendee 2</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Demo Requests (Demo Attendee 2)</relationshipLabel>
    <relationshipName>Demo_Requests1</relationshipName>
    <type>Lookup</type>
</CustomField>