force-app/main/default/objects/DI_Demo_Request__c/fields/Demo_Attendee_3__c.field-meta.xml
<CustomField>
    <fullName>Demo_Attendee_3__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Demo Attendee 3</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Demo Requests (Demo Attendee 3)</relationshipLabel>
    <relationshipName>Demo_Requests2</relationshipName>
    <type>Lookup</type>
</CustomField>