force-app/main/default/objects/DI_Demo_Request__c/fields/Demo_Request_Summary__c.field-meta.xml
<CustomField>
    <fullName>Demo_Request_Summary__c</fullName>
    <description>This will store the description of demo request. Created as per EBA_SF-1538</description>
    <label>Demo Request Summary</label>
    <type>TextArea</type>
</CustomField>