force-app/main/default/objects/DI_Demo_Request__c/fields/Main_Feature_to_Demo__c.field-meta.xml
<CustomField>
    <fullName>Main_Feature_to_Demo__c</fullName>
    <label>Main Feature to Demo</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>ACH/Wires on Business Banking</fullName>
            </value>
            <value>
                <fullName>ACH/Wires on Retail Banking</fullName>
            </value>
            <value>
                <fullName>Admin Platform</fullName>
            </value>
            <value>
                <fullName>Alexa Voice Banking</fullName>
            </value>
            <value>
                <fullName>BB Security and Fraud Protection</fullName>
            </value>
            <value>
                <fullName>BB UI and Login</fullName>
            </value>
            <value>
                <fullName>Bill Payment-FIS/Fiserv</fullName>
            </value>
            <value>
                <fullName>Bill Payment-User Interface</fullName>
            </value>
            <value>
                <fullName>Business Banking in General</fullName>
            </value>
            <value>
                <fullName>Cardless Withdrawal</fullName>
            </value>
            <value>
                <fullName>Card Management</fullName>
            </value>
            <value>
                <fullName>ClickSwitch</fullName>
            </value>
            <value>
                <fullName>Competitive Intelligence</fullName>
            </value>
            <value>
                <fullName>Compliance</fullName>
            </value>
            <value>
                <fullName>Consumer Data Files</fullName>
            </value>
            <value>
                <fullName>Contract Questions</fullName>
            </value>
            <value>
                <fullName>Create Your Own Page - Mobile (Mobile SSO)</fullName>
            </value>
            <value>
                <fullName>Data/Reporting</fullName>
            </value>
            <value>
                <fullName>Data Center</fullName>
            </value>
            <value>
                <fullName>Delivery in General</fullName>
            </value>
            <value>
                <fullName>Delivery-Sample Project Plan/Timeline</fullName>
            </value>
            <value>
                <fullName>Digital Banking Platform (USP)</fullName>
            </value>
            <value>
                <fullName>DI Labs</fullName>
            </value>
            <value>
                <fullName>Domains</fullName>
            </value>
            <value>
                <fullName>DPV Interfaces</fullName>
            </value>
            <value>
                <fullName>Enhanced Alerts</fullName>
            </value>
            <value>
                <fullName>Existing Security Controls</fullName>
            </value>
            <value>
                <fullName>FinanceWorks</fullName>
            </value>
            <value>
                <fullName>Financial Services Gateway (FSG)</fullName>
            </value>
            <value>
                <fullName>Foreign Language</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>