force-app/main/default/objects/DI_Demo_Request__c/fields/Modules_to_be_Demonstrated__c.field-meta.xml
<CustomField>
    <fullName>Modules_to_be_Demonstrated__c</fullName>
    <label>Modules to be Demonstrated</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>POS</fullName>
            </value>
            <value>
                <fullName>ATO</fullName>
            </value>
            <value>
                <fullName>AK</fullName>
            </value>
            <value>
                <fullName>NBO</fullName>
            </value>
            <value>
                <fullName>Pulse</fullName>
            </value>
            <value>
                <fullName>Restaurant Guard</fullName>
            </value>
            <value>
                <fullName>Insight</fullName>
            </value>
            <value>
                <fullName>Consumer Marketing</fullName>
            </value>
            <value>
                <fullName>Digital Ordering</fullName>
            </value>
            <value>
                <fullName>CMC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>