force-app/main/default/objects/DI_Demo_Request__c/fields/Products_Services_if_Other__c.field-meta.xml
<CustomField>
    <fullName>Products_Services_if_Other__c</fullName>
    <label>Products &amp; Services if Other</label>
    <length>255</length>
    <type>Text</type>
</CustomField>