force-app/main/default/objects/DI_Demo_Request__c/fields/SE_Assigned__c.field-meta.xml
<CustomField>
    <fullName>SE_Assigned__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Assigned to Solutions Consultant</label>
    <referenceTo>User</referenceTo>
    <relationshipName>DI_Demo_Requests1</relationshipName>
    <type>Lookup</type>
</CustomField>