force-app/main/default/objects/DI_Demo_Request__c/fields/What_could_we_do_to_improve__c.field-meta.xml
<CustomField>
    <fullName>What_could_we_do_to_improve__c</fullName>
    <label>What could we do to improve?</label>
    <type>TextArea</type>
</CustomField>