force-app/main/default/objects/DI_Demo_Request__c/recordTypes/DI_Demo_Request.recordType-meta.xml
<RecordType>
    <fullName>DI_Demo_Request</fullName>
    <active>true</active>
    <label>DI Demo Request</label>
</RecordType>