force-app/main/default/objects/DI_Demo_Request__c/recordTypes/SE_Demo_Request.recordType-meta.xml
<RecordType>
    <fullName>SE_Demo_Request</fullName>
    <active>true</active>
    <label>SE Demo Request</label>
</RecordType>