force-app/main/default/objects/DI_Demo_Request__c/validationRules/Prevent_To_Create_Save_Record.validationRule-meta.xml
<ValidationRule>
    <fullName>Prevent_To_Create_Save_Record</fullName>
    <active>true</active>
    <errorConditionFormula>Opportunity__r.IsClosed</errorConditionFormula>
    <errorDisplayField>Account_Name__c</errorDisplayField>
    <errorMessage>This Opportunity is already closed, try with a different opportunity.</errorMessage>
</ValidationRule>