force-app/main/default/objects/DI_Demo_Request__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Opportunity__c</columns>
    <columns>Scope_of_Demo__c</columns>
    <columns>Demo_Request_Summary__c</columns>
    <columns>Type_of_Demo__c</columns>
    <columns>Confirmed_Date_Time__c</columns>
    <columns>SE_Assigned__c</columns>
    <columns>Alt_SE__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>